Redesigned some stuff and fixed layout issue

--- a/static/css/Base.css
+++ b/static/css/Base.css
@@ -103,6 +103,11 @@ main {
     padding: 0;
 }
 
+div.col-md-8.col-sm-8.col-xs-12, div.col-md-4.col-sm-4.col-xs-12 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
 .skills-container {
     border:1px solid #ccc;
     width:100%;
